virt01/automated/camera/wyze-bridge/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wbridge
  labels:
    app: wbridge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wbridge
  template:
    metadata:
      labels:
        app: wbridge
    spec:
      hostNetwork: true
      runtimeClassName: nvidia
      serviceAccountName: wbridge-sa
      containers:
        - name: wbridge
          image: harbor.nf.lab/proxy.docker.io/mrlt8/wyze-bridge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8554
              name: rtsp-port
              protocol: TCP
            - containerPort: 1935
              name: rtmp-port
              protocol: TCP
            - containerPort: 8888
              name: hls-port
              protocol: TCP
            - containerPort: 8889
              name: webrtc-port
              protocol: TCP
            - containerPort: 8189
              name: webrtc-ice-port
              protocol: UDP
            - containerPort: 5000
              name: webui-port
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
          readinessProbe:
            tcpSocket:
              port: webui-port
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: webui-port
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
