virt01/automated/camera/wyze-bridge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wyze-ingress
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.test.nf.lab
spec:
  rules:
  - host: wyze.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: wyze-ui-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - wyze.k3s.nf.lab
    secretName: wyze-tls
---
